# FaceDetection

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  facedetectionrequestsender.cpp  facedetectionrequestsender.h  imageviewer.cpp  imageviewer.h  imageviewer.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_imageviewer.h  ui_mainwindow.h  zoomhandler.cpp  zoomhandler.h
FaceDetectionCLI/: CMakeLists.txt  analysisresultsreceiver.cpp  analysisresultsreceiver.h  main.cpp  resultsgenerator.cpp  resultsgenerator.h
FaceDetectionGUI/: CMakeLists.txt  imageviewer.cpp  imageviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
FaceDetectionLib/: CMakeLists.txt  imageanalyzer.cpp  imageanalyzer.h
